force-app/main/default/objects/QIS_Sales_Performance__c/QIS_Sales_Performance__c.object-meta.xml
<CustomObject>
    <label>QIS Sales Performance</label>
    <nameField>
        <displayFormat>QIS-{0000000}</displayFormat>
        <label>QIS Sales Performance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QIS Sales Performance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>