force-app/main/default/objects/QIS_Sales_Performance__c/fields/Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Case Number</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>