force-app/main/default/objects/QIS_Sales_Performance__c/fields/Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year__c</fullName>
    <formula>IF(AND( Month__c &gt;=1,  Month__c &lt;=6), (Text(Year__c) &amp; &quot;-&quot; &amp; Right((Text((Year__c)-1)),2)), (Text(Year__c) &amp; &quot;-&quot; &amp; Right(Text((Year__c)+1),2)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fiscal Year</label>
    <type>Text</type>
</CustomField>