force-app/main/default/objects/QIS_Sales_Performance__c/fields/Task_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_Sub_Type__c</fullName>
    <label>Task Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Review</fullName>
            </value>
            <value>
                <fullName>Feedback</fullName>
            </value>
            <value>
                <fullName>Market Intelligence</fullName>
            </value>
            <value>
                <fullName>Opportunity Generation</fullName>
            </value>
            <value>
                <fullName>Stakeholder Engagement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>