force-app/main/default/objects/QIS_Sales_Performance__c/recordTypes/Amex_Lead.recordType-meta.xml
<RecordType>
    <fullName>Amex_Lead</fullName>
    <active>true</active>
    <description>Amex Leads</description>
    <label>Amex Lead</label>
</RecordType>