force-app/main/default/objects/QIS_Sales_Performance__c/recordTypes/Campaign_Member.recordType-meta.xml
<RecordType>
    <fullName>Campaign_Member</fullName>
    <active>true</active>
    <description>Campaign Member</description>
    <label>Campaign Member</label>
</RecordType>