force-app/main/default/objects/QIS_Sales_Performance__c/recordTypes/Cases.recordType-meta.xml
<RecordType>
    <fullName>Cases</fullName>
    <active>true</active>
    <label>Cases</label>
</RecordType>