force-app/main/default/objects/QIS_Sales_Performance__c/recordTypes/Engagement.recordType-meta.xml
<RecordType>
    <fullName>Engagement</fullName>
    <active>true</active>
    <description>Stakeholder Engagement</description>
    <label>Engagement</label>
</RecordType>