force-app/main/default/objects/QIS_Sales_Performance__c/recordTypes/Feedback_MI.recordType-meta.xml
<RecordType>
    <fullName>Feedback_MI</fullName>
    <active>true</active>
    <description>Feedback or Market Intelligence</description>
    <label>Feedback/MI</label>
</RecordType>