force-app/main/default/objects/QIS_Sales_Performance__c/recordTypes/Opp_Gen.recordType-meta.xml
<RecordType>
    <fullName>Opp_Gen</fullName>
    <active>true</active>
    <description>Opportunity Generation</description>
    <label>Opp Gen</label>
</RecordType>