force-app/main/default/objects/QIS_Sales_Performance__c/recordTypes/Opp_Won.recordType-meta.xml
<RecordType>
    <fullName>Opp_Won</fullName>
    <active>true</active>
    <description>Retention Wins or New Acquisition Wins</description>
    <label>Opp Won</label>
</RecordType>