force-app/main/default/objects/QIS_Sales_Performance__c/recordTypes/Review.recordType-meta.xml
<RecordType>
    <fullName>Review</fullName>
    <active>true</active>
    <description>Account Reviews</description>
    <label>Review</label>
</RecordType>