force-app/main/default/objects/QIS_Sales_Performance__c/recordTypes/SME_Callouts.recordType-meta.xml
<RecordType>
    <fullName>SME_Callouts</fullName>
    <active>true</active>
    <description>SME Callouts</description>
    <label>SME Callouts</label>
</RecordType>