force-app/main/default/objects/QIS_Sales_Performance__c/recordTypes/SME_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>SME_Opportunity</fullName>
    <active>true</active>
    <description>This is for all new opps logged by SME Callout team.</description>
    <label>SME Opportunity</label>
</RecordType>